--- a/sv-app-frontend/package.json
+++ b/sv-app-frontend/package.json
@@ -9,13 +9,21 @@
   },
   "license": "GPLv3",
   "dependencies": {
-    "@fullpage/react-fullpage": "^0.1.28",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@fullpage/react-fullpage": "0.1.35",
+    "@headlessui/react": "^1.7.15",
+    "@heroicons/react": "^2.0.18",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "5.0.0",
+    "flowbite": "^2.2.1",
+    "flowbite-react": "^0.7.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-scripts": "5.0.1",
+    "sass": "^1.65.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -43,8 +51,9 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.2",
+    "autoprefixer": "^10.4.15",
     "postcss": "^8.4.6",
-    "tailwindcss": "^3.0.18"
+    "postcss-cli": "^10.1.0",
+    "tailwindcss": "^3.3.3"
   }
 }
